[package]
name = "script_doc_tool"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ScriptDocTool"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
termsize = "0.1.9"
